# relatable

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  TODO.org  manual.sh  rustfmt.toml  testing.sql
cli/: Cargo.toml
cli/src/: main.rs
db/: Cargo.toml
db/src/: block.rs  blockdisk.rs  database.rs  inmemorydb.rs  lib.rs  table.rs
docs/: disk-format.md  plans-refactoring.md  plans-removing-blocks.md
parser/: Cargo.toml
parser/src/: ast.rs  grammar.g4  grammar.rs  lang.rs  lib.rs  sql.pest  tokenizer.rs  type_checking.rs
schema/: Cargo.toml
schema/src/: data.rs  disk.rs  field.rs  lib.rs  memorydb.rs  row.rs  schema.rs  table.rs
schema/src/disk/: block.rs
