[package]
name = "cli"
version = "0.1.0"
authors = ["Nathan <nlincoln@intellifarms.com>"]
edition = "2018"

[dependencies]
db = { path = "../db" }
schema = { path = "../schema" }
log = "0.4"
env_logger = "0.6"
parser = { path = "../parser" }
[dependencies.prettytable]
version = "0.8"
package = "prettytable-rs"
